--- a/package.json
+++ b/package.json
@@ -51,10 +51,11 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
     "echarts": "^3.8.5",
     "element-ui": "^2.0.9",
+    "swiper": "^4.0.7",
     "vue": "^2.5.13",
-    "vue-router": "^3.0.1",
-    "swiper": "^4.0.7"
+    "vue-router": "^3.0.1"
   }
 }
