--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-polyfill": "^6.26.0",
     "echarts": "^3.8.5",
     "element-ui": "^2.0.9",
+    "mysql2": "^1.5.3",
     "swiper": "^4.0.7",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
